--- a/index.html
+++ b/index.html
@@ -840,10 +840,10 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-block w-100 text-center">
-                                <img src="images/testimonial-1.jpg" class="img-thumbnail customer-picture"
+                                <img src="images/testimonial-2.jpg" class="img-thumbnail customer-picture"
                                     alt="customer-picture">
                                 <div class="customer-details white-box">
-                                    <h2>Marissa Mayer</h2>
+                                    <h2>John Mayer</h2>
                                     <span>CEO, Yahoo</span>
                                     <p>Quo rem cumque facere modi beatae. Deleniti nisi, repellat quae aspernatur
                                         consequatur
